@@ -106,15 +106,6 @@ p {
  margin-left:5px;
 }
 
-.actionbar {
- background-color: #1A1A1A;
- height: 77px;
- border-top: 3px solid #70C000;
- border-left: 3px solid #70C000;
- padding-top:3px;
- padding-left:3px;
-}
-
 .task {
  background-color: #FFFFFF;
  height: 50px;
@@ -745,3 +736,15 @@ text-align:right;
  padding-top:0px;
  padding-bottom:0px;
 }
+
+.result_section {
+ border-width: 1px;
+ border-style: solid;
+ border-color: #3A3A3A;
+ border-top: 0px;
+}
+
+.result_section_top {
+ border-top: 1px solid;
+}
+
